# engine-builder

./: .gitignore  CLAUDE.md  Cargo.toml  INSTRUCTIONS.md  LICENSE  README.md  config.example.json  config.json.example  exclusions.json  instructions.md
.github/workflows/: dogfood.yml  engine-builder-test.yml  file-selection.yml  rust-ci.yml
docs/: LANGFUSE.md
src/: config.rs  lib.rs  main.rs
src/chat/: mod.rs  tools.rs  ui.rs
src/llm/: anthropic.rs  client.rs  langfuse.rs  mod.rs  openai.rs  prompts.rs
src/models/: dockerfile.rs  exclusion.rs  file.rs  mod.rs  overview.rs  problem.rs  ranking.rs  relevance.rs
src/stages/: chat.rs  container.rs  dockerfile.rs  file_selection.rs  mod.rs  overview.rs  ranking.rs  relevance.rs  scripts.rs
src/test/: mock_llm.rs  mod.rs
src/utils/: json_utils.rs  mod.rs  token_counter.rs  trajectory_store.rs
tests/: config_tests.rs  dockerfile_tests.rs  exclusion_file_tests.rs  exclusion_pattern_tests.rs  exclusion_unit_tests.rs  file_exclusion_tests.rs  git_dir_exclusion_test.rs  json_utils_tests.rs  pipeline_e2e_integration_tests.rs  pipeline_integration_tests.rs  pipeline_mock_llm_tests.rs  problem_model_tests.rs  ranking_model_tests.rs  relevance_model_tests.rs  retry_tests.rs  test_retry_integration.rs  token_counter_tests.rs  trajectory_store_tests.rs
