[package]
name = "codemonkeys-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1.77"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
rayon = "1.8"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
futures = "0.3"
log = "0.4"
env_logger = "0.10"
derive_builder = "0.12"
walkdir = "2.4"